feat: migrate to gradle 8.x